--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
   "authors": [
     "Dan Storey <danielstorey@gmail.com>"
   ],
-  "description": "",
+  "description": "Drag to sort a list of items into the right order",
+  "displayName": "Sortable",
   "main": "/js/adapt-sortable.js",
   "keywords": [
     "adapt-plugin",
